# templates

./: .gitignore  LICENSE.md  README.md  _config.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: pages.yml
dotfiles/: .gitignore  README.md  flake.nix
dotfiles/configs/main/: colmena.nix  default.nix  hardware-configuration.nix
dotfiles/modules/: default.nix
dotfiles/modules/nix/: default.nix  flakes.nix
dwm-flake/: .gitignore  flake.nix
flake-parts/: flake.nix  module.nix
golang/: .envrc  .tmp  flake.nix  go.mod
golang-old/: flake.nix
haskell/: rust-flake.cabal
haskell.old/: flake.nix
haskell.old/.github/workflows/: update-flake-lock.yml
haskell/.github/: dependabot.yml
haskell/.github/workflows/: nix-flake.yml
haskell/src/: Main.hs
hillingar/: flake.nix
hs/: .gitignore  LICENSE  flake.nix  hello.cabal
hs/nix/: hix.nix
latex/: flake.nix  notes.tex
nix/: hix.nix
ocaml/: .ocamlformat  dune-project  flake.nix  nix_ocaml.opam
ocaml/lib/: dune  lib.ml  lib.mli
ocaml/src/: dune  main.ml
ocaml/test/: dune
rust/: Cargo.toml  build.rs  flake.nix  treefmt.nix
rust-parts/: flake.nix  rust-toolchain.toml  shell.nix  treefmt.nix
rust-parts/.github/workflows/: unit-tests.yml
rust/.github/: labeler.yml
rust/.github/workflows/: flake-build.yml  flakehub-publish.yml  nix-flake.yml  update-flake-lock.yml
rust/src/: lib.rs  main.rs
seekr-rs/: Cargo.toml  flake.nix
sh/: flake.nix  main.sh
