(lang dune 3.11)

(name nix_ocaml)

(generate_opam_files true)

(source
 (github "9glenda/nix-ocaml"))

(authors "9glenda")

(maintainers "9glenda")

(license LICENSE)

(documentation https://github.com/9glenda/nix-ocaml)

(package
 (name nix_ocaml)
 (synopsis "Simple ocaml template fro using nix flakes")
 (description "A longer description")
 (depends 
   dune
   (ocaml (>= "5.1.0"))
   ; jane street
   (core (>= 0.16.0))
   ; (core_extended (>= 0.16.0))
  )
 (tags
  (topics "ocaml")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
