[package]
name = "rust-flake"
description = "simple flake for rust projects"
version = "0.1.0"
edition = "2021"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "rust-flake"

[profile.dev]
opt-level = 0
debug = false
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
