[package]
name = "rust-flake"
description = "simple flake for rust projects"
version = "0.1.0"
edition = "2021"
readme = "README.md"
build = "build.rs"
license = "GPLv3"
keywords = ["rust"]
categories = ["development-tools"]
repository = "https://github.com/9glenda/rust-flake"

[dependencies]
clap = { version = "4.4.5", features = ["cargo", "derive"] }


[[bin]]
name = "rust-flake"

[profile.dev]
opt-level = 0
debug = false
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
